# CppFrameWork

./: .gitmodules  CMakeLists.txt  README.md  SETUP.md
include/: CassServer.h  FrameWork.h  FrameWorkGlobals.h
src/: CassServer.cpp  FrameWork.cpp
test_main/: main.cpp
tests/: test_main.cpp
